--- a/content/themes/elements/sass/layout/_aside.scss
+++ b/content/themes/elements/sass/layout/_aside.scss
@@ -10,9 +10,8 @@ aside .aside-images{
     height: 100%;
     display: block;
 
-    img{
-      width: 100%;
-      height: auto;
-    }
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 }
